--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -23,19 +23,22 @@
     "@angular/platform-server": "^5.1.0",
     "@angular/router": "^5.1.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.7",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
     "ngx-bootstrap": "^2.0.0-beta.11",
     "rxjs": "^5.5.5",
+    "tether": "^1.4.3",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@angular/cli": "^1.6.5",
     "@angular/compiler-cli": "^5.1.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.28.3",
     "codelyzer": "~2.0.0-beta.1",
+    "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
@@ -45,8 +48,12 @@
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.13",
     "ts-node": "1.2.1",
-    "tslint": "^4.0.2",
+    "tslint": "~5.7.0",
     "typescript": "2.4.2",
-    "webdriver-manager": "10.2.5"
+    "webdriver-manager": "10.2.5",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-middleware": "^3.1.2",
+    "webpack-dev-server": "^3.1.3"
   }
 }
